[package]
name = "chia-puzzles"
version = "0.20.3"
edition = "2021"
license = "Apache-2.0"
description = "Chia primitives needed for building wallets."
authors = ["Matt Howard <matt@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_puzzles"
repository = "https://github.com/Chia-Network/chia_puzzles"

[dependencies]
hex = "0.4"
hex-literal = "1.1.0"

[build-dependencies]
hex = "0.4"
